# HPX-FFT

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_fftw_examples.sh  compile_hpxfft_examples.sh  compile_new.sh  compile_tests.sh
.github/workflows/: ci.yml  lint.yml
benchmark/: distributed_benchmark.sh  message_benchmark.sh  shared_benchmark.sh
benchmark/sbatch_scripts/: run_fftw_message_size.sh  run_fftw_size_shared.sh  run_fftw_strong_distributed.sh  run_fftw_strong_shared.sh  run_fftw_weak_distributed.sh  run_fftw_weak_shared.sh  run_hpxfft_message_size.sh  run_hpxfft_size_shared.sh  run_hpxfft_strong_distributed.sh  run_hpxfft_strong_shared.sh  run_hpxfft_weak_distributed.sh  run_hpxfft_weak_shared.sh
cmake/: install-config.cmake
core/: CMakeLists.txt
core/include/hpxfft/distributed/: agas.hpp  agas_server.hpp  hpxfft_distributed_agas.hpp  hpxfft_distributed_agas_server.hpp  hpxfft_distributed_loop.hpp  loop.hpp
core/include/hpxfft/shared/: agas.hpp  agas_server.hpp  hpxfft_loop_shared.hpp  hpxfft_shared_agas.hpp  hpxfft_shared_agas_server.hpp  hpxfft_shared_loop.hpp  hpxfft_shared_naive.hpp  hpxfft_shared_opt.hpp  hpxfft_shared_sync.hpp  loop.hpp  naive.hpp  opt.hpp  sync.hpp
core/include/hpxfft/util/: adapter_fftw.hpp  create_dir.hpp  print_vector.hpp  print_vector_2d.hpp  vector_2d.hpp
core/src/distributed/: agas.cpp  hpxfft_distributed_agas.cpp  hpxfft_distributed_loop.cpp  loop.cpp
core/src/shared/: agas.cpp  hpxfft_loop_shared.cpp  hpxfft_shared_agas.cpp  hpxfft_shared_loop.cpp  hpxfft_shared_naive.cpp  hpxfft_shared_opt.cpp  hpxfft_shared_sync.cpp  loop.cpp  naive.cpp  opt.cpp  sync.cpp
core/src/util/: adapter_fftw.cpp  create_dir.cpp
examples/fftw/: CMakeLists.txt  fftw_mpi_omp_2d.cpp  fftw_mpi_threads_2d.cpp  fftw_omp_2d.cpp  fftw_threads_2d.cpp
examples/hpxfft/: CMakeLists.txt  distributed_agas_2d.cpp  distributed_loop_2d.cpp  loop_shared_2d.cpp  shared_agas_2d.cpp  shared_loop_2d.cpp  shared_naive_2d.cpp  shared_opt_2d.cpp  shared_sync_2d.cpp
spack-repo/: repo.yaml
spack-repo/environments/: ci_env_settings.yaml.tpl  hpxfft_arm_ookami.yaml  hpxfft_ci.yaml  hpxfft_x86_epyc.yaml  hpxfft_x86_simcl.yaml  spack_cpu_gcc.yaml
test/: CMakeLists.txt
test/src/: test_distributed_agas.cpp  test_distributed_loop.cpp  test_naive.cpp  test_shared_agas.cpp  test_shared_loop.cpp  test_shared_opt.cpp  test_shared_sync.cpp  test_vector_2d.cpp  utils.cpp
